# EkanjiBot

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  bot.py  docker-compose.yaml  log.py  pyproject.toml  start.sh
core/: config.py  constants.py  database.py  messages.py
db/: AGENTS.md  __init__.py
db/models/: __init__.py  base.py  character_glyph.py  font.py  sticker_set.py  user.py
db/repositories/: __init__.py  base.py  character_glyph_repo.py  font_repo.py  sticker_set_repo.py  user_repo.py
docs/: DATABASE_DESIGN.md  DESIGN_SUMMARY.md
handlers/: AGENTS.md  __init__.py
handlers/commands/: __init__.py  font.py  random_font.py  start.py
handlers/inline/: __init__.py  inline_handler.py
handlers/messages/: __init__.py  text_handler.py
middlewares/: __init__.py  database.py  user_context.py
migrations/: README  env.py
migrations/versions/: c6521dae8f94_initial_schema.py
services/: AGENTS.md  __init__.py  font_sync_service.py  image_service.py  random_font_service.py  sticker_service.py  user_service.py
utils/: emoji_utils.py  font_support.py  font_utils.py  text_utils.py  ttl_cache.py
